[metadata]
name = rubydj-pyworker
version = 1.2.1
description = A pure Python worker for Ruby-based DelayedJobs with Newrelic reporting.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rayyansys/pyworker
author = Rayyan Systems, Inc.
author_email = support@rayyan.ai
license = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    psycopg2-binary >= 2
    python-dateutil >= 2
    PyYAML >= 3
    newrelic >= 8.3.0

[bdist_wheel] # requires pip install wheel first
universal = 1
